data/derived/sp14/progs/unify/prog2121.ml.out
Characters 56-60:
  | (h::t) -> pipe;;
              ^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type 'b list
